The Final version of the vel_scheduler code, enhanced and organized...

--- a/catkin/src/cwru_376_student/example_robot_commander/CMakeLists.txt
+++ b/catkin/src/cwru_376_student/example_robot_commander/CMakeLists.txt
@@ -17,7 +17,7 @@ catkin_simple()
 # Executables
 cs_add_executable(robot_commander src/example_robot_commander.cpp)
 cs_add_executable(halt_commander src/halt_commander.cpp)
-cs_add_executable(vel_scheduler src/vel_scheduler.cpp)
+cs_add_executable(vel_scheduler-alaa src/vel_scheduler-alaa.cpp)
 # target_link_library(example my_lib)
  
 cs_install()
