Always include cwru_msgs in your create_pkg

--- a/catkin/src/cwru_376_student/ps3_epsilon/CMakeLists.txt
+++ b/catkin/src/cwru_376_student/ps3_epsilon/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(ps3_epsilon)
 
+
 find_package(catkin_simple REQUIRED)
 
 catkin_simple()
@@ -9,7 +10,7 @@ catkin_simple()
 # find_package(Boost REQUIRED COMPONENTS system thread)
 
 # C++0x support - not quite the same as final C++11!
-# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
 # Libraries
 # cs_add_libraries(my_lib src/my_lib.cpp)   
