--- a/catkin/src/cwru_376_student/ps3_epsilon/package.xml
+++ b/catkin/src/cwru_376_student/ps3_epsilon/package.xml
@@ -41,11 +41,14 @@
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>catkin_simple</buildtool_depend>
   <build_depend>roscpp</build_depend>
-<build_depend>geometry_msgs/Twist</build_depend>
-<build_depend>nav_msgs/Odometry</build_depend>
+<build_depend>geometry_msgs</build_depend>
+<build_depend>nav_msgs</build_depend>
+<build_depend>cwru_msgs</build_depend>
+
   <run_depend>roscpp</run_depend>
-<run_depend>geometry_msgs/Twist</run_depend>
-<run_depend>nav_msgs/Odometry</run_depend>
+<run_depend>geometry_msgs</run_depend>
+<run_depend>nav_msgs</run_depend>
+<run_depend>cwru_msgs</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
