--- a/catkin/src/cwru_376_student/abb_pub_base/CMakeLists.txt
+++ b/catkin/src/cwru_376_student/abb_pub_base/CMakeLists.txt
@@ -15,7 +15,7 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 # cs_add_libraries(pub_abb_base src/pub_abb_base.cpp)   
 
 # Executables
-cs_add_executable(abb_pub_base src/abb_pub_base.cpp)
+#cs_add_executable(abb_pub_base src/abb_pub_base.cpp)
 # target_link_library(example my_lib)
 
 cs_install()
