--- a/catkin/src/cwru_376_student/z_epsilon/epsilon_dsg/CMakeLists.txt
+++ b/catkin/src/cwru_376_student/z_epsilon/epsilon_dsg/CMakeLists.txt
@@ -21,7 +21,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 cs_add_executable(epsilon_dsg src/epsilon_dsg.cpp)
 cs_add_executable(estop_listener src/estop_listener.cpp)
 cs_add_executable(lidar_alarm src/lidar_alarm.cpp)
-cs_add_executable(path_sender src/path_sender.cpp)
+cs_add_executable(goal_sender src/goal_sender.cpp)
+cs_add_executable(home_sender src/home_sender.cpp)
 # target_link_library(example my_lib)
 
 cs_install()
