Team - adding new motion and dsg codes for ODOM

--- a/catkin/src/cwru_376_student/z_epsilon/epsilon_dsg/CMakeLists.txt
+++ b/catkin/src/cwru_376_student/z_epsilon/epsilon_dsg/CMakeLists.txt
@@ -23,6 +23,9 @@ cs_add_executable(estop_listener src/estop_listener.cpp)
 cs_add_executable(lidar_alarm src/lidar_alarm.cpp)
 cs_add_executable(goal_sender src/goal_sender.cpp)
 cs_add_executable(home_sender src/home_sender.cpp)
+cs_add_executable(epsilon_dsg_odom src/epsilon_dsg_odom.cpp)
+cs_add_executable(goal_sender_odom src/goal_sender_odom.cpp)
+cs_add_executable(home_sender_odom src/home_sender_odom.cpp)
 # target_link_library(example my_lib)
 
 cs_install()
